force-app/main/default/objects/User_Access__c/User_Access__c.object-meta.xml
<CustomObject>
    <label>User Access</label>
    <nameField>
        <label>User Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>