force-app/main/default/objects/User_Access__c/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <label>Event Timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>