force-app/main/default/objects/User_Access__c/fields/Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner__c</fullName>
    <label>Record Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>