force-app/main/default/objects/User_Access__c/fields/Record_URI__c.field-meta.xml
<CustomField>
    <fullName>Record_URI__c</fullName>
    <label>Record URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>