force-app/main/default/objects/User_Access__c/fields/User_Department__c.field-meta.xml
<CustomField>
    <fullName>User_Department__c</fullName>
    <label>User Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>