force-app/main/default/objects/User_Access__c/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <label>User Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>